not a serious attempt

--- a/hack/k8s/autonomy/deployment.yaml
+++ b/hack/k8s/autonomy/deployment.yaml
@@ -7,7 +7,7 @@ spec:
   replicas: 2
   selector:
     matchLabels:
-      app: kuscia-autonomy-alice
+      app: kuscia-alice
   template:
     metadata:
       labels:
