--- a/etc/conf/envoy/envoy.yaml
+++ b/etc/conf/envoy/envoy.yaml
@@ -1,16 +1,16 @@
 admin:
   access_log:
-    - name: "envoy.access_loggers.file"
+    - name: 'envoy.access_loggers.file'
       typed_config:
-        "@type": "type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog"
-        path: "var/logs/envoy/envoy_admin.log"
+        '@type': 'type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog'
+        path: 'var/logs/envoy/envoy_admin.log'
   address:
     # It is critical that access to the administration interface is only allowed via a secure network.
     # It is also critical that hosts that access the administration interface are only attached to the secure network
     # (i.e., to avoid CSRF attacks).
     # This involves setting up an appropriate firewall or optimally only allowing access to the administration listener via localhost.
     socket_address:
-      address: 127.0.0.1
+      address: 0.0.0.0
       port_value: 10000
 
 layered_runtime:
@@ -45,11 +45,25 @@ dynamic_resources:
 
 static_resources:
   clusters:
+    - name: otel-collector
+      type: STRICT_DNS
+      connect_timeout: 1s
+      lb_policy: ROUND_ROBIN
+      load_assignment:
+        cluster_name: otel-collector
+        endpoints:
+          - lb_endpoints:
+              - endpoint:
+                  address:
+                    socket_address:
+                      address: otel-collector
+                      port_value: 9411
+
     - name: xds-cluster
       connect_timeout: 1s
       typed_extension_protocol_options:
         envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
-          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
+          '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
           explicit_http_config:
             http2_protocol_options: {}
       load_assignment:
@@ -76,7 +90,7 @@ static_resources:
       connect_timeout: 1s
       typed_extension_protocol_options:
         envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
-          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
+          '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
           use_downstream_protocol_config: {}
       load_assignment:
         cluster_name: internal-cluster
@@ -91,7 +105,7 @@ static_resources:
       connect_timeout: 1s
       typed_extension_protocol_options:
         envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
-          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
+          '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
           explicit_http_config:
             http2_protocol_options: {}
       load_assignment:
